--- a/index.html
+++ b/index.html
@@ -5,32 +5,32 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="description" content="...">
-        <meta name="keywords" content="...">
+        <meta name="description" content="Conheça minhas habilidades e conhecimentos técnicos. Abaixo, você encontrará uma visão detalhada das minhas expertises, juntamente com aplicações e links diretos para o meu portfólio. Explore os projetos e serviços que ofereço.">
+        <meta name="keywords" content="Daniel Mazzeu, portfólio">
         <meta name="author" content="Daniel Mazzeu">
         <meta name="robots" content="index, follow">
 
         <!-- Social Metatags -->
-        <meta property="og:title" content="...">
-        <meta property="og:description" content="...">
-        <meta property="og:image" content="...">
-        <meta property="og:url" content="...">
+        <meta property="og:title" content="Daniel Mazzeu - Portfólio">
+        <meta property="og:description" content="Conheça minhas habilidades e conhecimentos técnicos. Abaixo, você encontrará uma visão detalhada das minhas expertises, juntamente com aplicações e links diretos para o meu portfólio. Explore os projetos e serviços que ofereço.">
+        <meta property="og:image" content="https://danielmazzeu.com.br/images/thumbnail.png">
+        <meta property="og:url" content="https://danielmazzeu.com.br">
         <meta property="og:type" content="website">
-        <meta property="og:site_name" content="...">
+        <meta property="og:site_name" content="Daniel Mazzeu - Portfólio">
         <meta property="og:locale" content="pt_BR">
 
         <!-- X Card -->
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="...">
-        <meta name="twitter:description" content="...">
-        <meta name="twitter:image" content="...">
-        <meta name="twitter:site" content="...">
+        <meta name="twitter:title" content="Daniel Mazzeu - Portfólio">
+        <meta name="twitter:description" content="Conheça minhas habilidades e conhecimentos técnicos. Abaixo, você encontrará uma visão detalhada das minhas expertises, juntamente com aplicações e links diretos para o meu portfólio. Explore os projetos e serviços que ofereço.">
+        <meta name="twitter:image" content="https://danielmazzeu.com.br/images/thumbnail.png">
+        <meta name="twitter:site" content="https://danielmazzeu.com.br">
         
         <!-- Favicon -->
-        <link rel="icon" href="images/favicon.ico" type="image/x-icon" title="...">
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon" title="Favicon Daniel Mazzeu - Portfólio">
 
         <!-- Title -->
-        <title>...</title>
+        <title>Daniel Mazzeu - Portfólio</title>
 
         <!-- Styles -->
         <link rel="stylesheet" href="css/global.css">
@@ -40,6 +40,7 @@
 
         <!-- Scripts -->
         <script defer src="javascript/jquery.js"></script>
+        <script defer src="javascript/protect.js"></script>
         <script defer src="javascript/sidemenu.js"></script>
         <script defer src="javascript/musicplayer.js"></script>
         <script defer src="javascript/main.js"></script>
@@ -175,7 +176,7 @@
             <!-- About -->
             <section id="about">
                 <h1>Sobre</h1>
-                <p>Paixão por tecnologia e aprendizado contínuo guiam minha jornada desde os 15 anos. Iniciei meus estudos com linguagens de programação básicas e evoluí para estruturas mais complexas, mantendo o ritmo de constante atualização. Atualmente, com 35 anos, estou aprofundando meus conhecimentos em Inteligência Artificial na FIAP. Possuo sólida experiência em desenvolvimento autônomo (freelancer/projetos próprios) e uma forte motivação para adquirir novas habilidades e enfrentar desafios.</p>
+                <p>Olá, me chamo Daniel Mazzeu. Minha paixão por tecnologia e aprendizado contínuo guia uma jornada que começou aos 15 anos, evoluindo de linguagens básicas a estruturas complexas. Atualmente, com 35 anos, estou aprofundando meus conhecimentos em Inteligência Artificial na FIAP. Com sólida experiência em desenvolvimento autônomo (freelancer e projetos próprios), busco integrar minha base técnica com os desafios e inovações do futuro, mantendo uma forte motivação para adquirir novas skills.</p>
                 <small>Atualizado 16/10/2025</small>
             </section>
             <!-- HTML -->
