--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <link rel="stylesheet" href="css/global.css">
         <link rel="stylesheet" href="css/sidemenu.css">
         <link rel="stylesheet" href="css/musicplayer.css">
+        <link rel="stylesheet" href="css/notifications.css">
         <link rel="stylesheet" href="css/main.css">
 
         <!-- Scripts -->
@@ -43,9 +44,15 @@
         <script defer src="javascript/protect.js"></script>
         <script defer src="javascript/sidemenu.js"></script>
         <script defer src="javascript/musicplayer.js"></script>
+        <script defer src="javascript/ia_notifications.js" type="module"></script>
         <script defer src="javascript/main.js"></script>
     </head>
     <body>
+
+        <!-- Notification -->
+        <aside class="notification">
+            <div class="notification-adjustment"></div>
+        </aside>
 
         <!-- Aside -->
         <aside class="sidemenu">
