--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
         <!-- Styles -->
         <link rel="stylesheet" href="css/global.css">
+        <link rel="stylesheet" href="css/wallpaper.css">
         <link rel="stylesheet" href="css/sidemenu.css">
         <link rel="stylesheet" href="css/musicplayer.css">
         <link rel="stylesheet" href="css/notifications.css">
@@ -48,6 +49,9 @@
         <script defer src="javascript/main.js"></script>
     </head>
     <body>
+
+        <!-- Wallpaper -->
+        <div class="wallpaper"></div>
 
         <!-- Notification -->
         <aside class="notification">
