--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                         <i class="bi bi-chevron-double-down"></i>
                     </a>
                     <div class="submenu">
+                        <a href="#contact">Contato</a>
                         <a href="#social">Redes Sociais</a>
                         <a href="#dania">DAN-IA</a>
                     </div>
@@ -409,6 +410,13 @@
                     <i class="bi bi-star"></i>
                 </div>
                 <p>Tenho bom domínio do Espanhol para leitura e escrita, permitindo a compreensão de documentação e comunicação por e-mail ou chat. Consigo participar de conversas básicas e técnicas e estou apto a prestar suporte ou interagir em situações cotidianas de trabalho com colegas de língua espanhola.</p>
+                <small>Atualizado 16/10/2025</small>
+            </section>
+            <!-- Social -->
+            <section id="contact">
+                <h1>Contato</h1>
+                <p>Acesse o link abaixo para entrar em contato comigo através do Whatsapp.</p>
+                <a href="https://wa.me/5516992399723" target="_blank">Whatsapp</a>
                 <small>Atualizado 16/10/2025</small>
             </section>
             <!-- Social -->
