--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
         <div class="wallpaper"></div>
 
         <!-- Notification -->
-        <aside class="notification">
-            <div class="notification-adjustment"></div>
-        </aside>
+        <aside class="notification"></aside>
 
         <!-- Aside -->
         <aside class="sidemenu">
