--- a/index.html
+++ b/index.html
@@ -144,13 +144,8 @@
                         <a href="#contact">Contato</a>
                         <a href="#social">Redes Sociais</a>
                         <a href="#dania">DAN-IA</a>
+                        <a href="#l009">L009</a>
                     </div>
-                </div>
-                <div class="menu">
-                    <a class="link" href="#l009">
-                        <i class="bi bi-globe"></i>
-                        <p>L009</p>
-                    </a>
                 </div>
             </section>
         </aside>
