--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
             <div class="spacer"></div>
             <!-- About -->
             <section id="about">
+                <div class="avatar">
+                    <img src="images/avatar2.jpg" alt="Avatar Daniel Mazzeu">
+                </div>
                 <h1>Sobre</h1>
                 <p>Olá, me chamo Daniel Mazzeu. Minha paixão por tecnologia e aprendizado contínuo guia uma jornada que começou aos 15 anos, evoluindo de linguagens básicas a estruturas complexas. Atualmente, com 35 anos, estou aprofundando meus conhecimentos em Inteligência Artificial na FIAP. Com sólida experiência em desenvolvimento autônomo (freelancer e projetos próprios), busco integrar minha base técnica com os desafios e inovações do futuro, mantendo uma forte motivação para adquirir novas skills.</p>
                 <small>Atualizado 16/10/2025</small>
