--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <div class="musicplayer-info">
                         <h1>Artist</h1>
                         <p>Music name</p>
-                        <button type="button"><i class="bi bi-x"></i></button>
+                        <button type="button"><i class="bi bi-dash"></i></button>
                     </div>
                     <div class="musicplayer-progressbar">
                         <div class="percentage"></div>
