--- a/index.html
+++ b/index.html
@@ -423,13 +423,13 @@
             <!-- Social -->
             <section id="social">
                 <h1>Redes Sociais</h1>
-                <p>Em desenvolvimento</p>
+                <p>Ao notar a crescente distorção da realidade que domina o ambiente online, optei por um retiro estratégico das redes sociais. Essa decisão se revelou incrivelmente benéfica, pois hoje sinto que grande parte das pessoas está sendo seriamente afetada no seu equilíbrio psicológico. Foi um passo essencial para preservar minha própria saúde mental.</p>
                 <small>Atualizado 16/10/2025</small>
             </section>
             <!-- DAN IA -->
             <section id="dania">
                 <h1>DAN-IA</h1>
-                <p>Em desenvolvimento</p>
+                <p>DAN-IA é uma Inteligência Artificial em desenvolvimento, com lançamento gratuito previsto para uso geral. Este projeto representa uma base sólida para o meu aprendizado e será uma ferramenta de grande utilidade e impacto nas minhas tarefas diárias.</p>
                 <small>Atualizado 16/10/2025</small>
             </section>
             <!-- L009 -->
