--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="header-search">              
-                    <input type="text" placeholder="Search" maxlength="100">
+                    <input type="text" placeholder="Buscar" maxlength="100">
                     <i class="bi bi-search"></i>
                 </div>
             </section>
