--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <link rel="stylesheet" href="css/sidemenu.css">
         <link rel="stylesheet" href="css/musicplayer.css">
         <link rel="stylesheet" href="css/notifications.css">
+        <link rel="stylesheet" href="css/dania.css">
         <link rel="stylesheet" href="css/main.css">
 
         <!-- Scripts -->
@@ -46,6 +47,7 @@
         <script defer src="javascript/sidemenu.js"></script>
         <script defer src="javascript/musicplayer.js"></script>
         <script defer src="javascript/ia_notifications.js" type="module"></script>
+        <script defer src="javascript/dania.js"></script>
         <script defer src="javascript/main.js"></script>
     </head>
     <body>
@@ -442,6 +444,16 @@
 
             <div class="spacer"></div>
         </main>
+
+        <!-- DAN-IA -->
+        <div class="dania">
+            <button class="dania-toggle" type="button">DAN-IA</button>
+            <textarea class="dania-prompt" readonly></textarea>
+            <div class="dania-form">
+                <input type="text" placeholder="Pergunte">
+                <button type="button"><i class="bi bi-caret-right-fill"></i></button>
+            </div>
+        </div>
 
     </body>
 </html>
