--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         <!-- DAN-IA -->
         <div class="dania">
             <button class="dania-toggle" type="button">DAN-IA</button>
-            <textarea class="dania-prompt" readonly></textarea>
+            <textarea class="dania-prompt" value="Em desenvolvimento..." readonly></textarea>
             <div class="dania-form">
                 <input type="text" placeholder="Pergunte">
                 <button type="button"><i class="bi bi-caret-right-fill"></i></button>
