--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
         <!-- DAN-IA -->
         <div class="dania">
             <button class="dania-toggle" type="button">DAN-IA</button>
-            <textarea class="dania-prompt" readonly>Em desenvolvimento...</textarea>
+            <textarea class="dania-prompt" placeholder="Aguarde..." readonly>Em desenvolvimento...</textarea>
             <div class="dania-form">
                 <input type="text" placeholder="Pergunte">
                 <button type="button"><i class="bi bi-caret-right-fill"></i></button>
