--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         <div class="wallpaper"></div>
 
         <!-- Notification -->
-        <aside class="notification"></aside>
+        <aside class="notification">
+            <div style="height: 100%;"></div>
+        </aside>
 
         <!-- Aside -->
         <aside class="sidemenu">
