--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <!-- Notification -->
         <aside class="notification">
-            <div style="height: 100%;"></div>
+            <div style="height: 75%;"></div>
         </aside>
 
         <!-- Aside -->
@@ -443,7 +443,7 @@
         <!-- DAN-IA -->
         <div class="dania">
             <button class="dania-toggle" type="button">DAN-IA</button>
-            <textarea class="dania-prompt" placeholder="Aguarde..." readonly>Em desenvolvimento...</textarea>
+            <textarea class="dania-prompt" placeholder="Aguarde..." readonly>Olá, sou a DAN-IA, me pergute algo sobre o Daniel.</textarea>
             <div class="dania-form">
                 <input type="text" placeholder="Pergunte">
                 <button type="button"><i class="bi bi-caret-right-fill"></i></button>
