--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <script defer src="javascript/protect.js"></script>
         <script defer src="javascript/sidemenu.js"></script>
         <script defer src="javascript/musicplayer.js"></script>
-        <script defer src="javascript/ia_notifications.js" type="module"></script>
+        <!-- <script defer src="javascript/ia_notifications.js" type="module"></script> -->
         <script defer src="javascript/dania.js"></script>
         <script defer src="javascript/main.js"></script>
     </head>
