--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             <!-- Social -->
             <section id="social">
                 <h1>Redes Sociais</h1>
-                <p>Ao notar a crescente distorção da realidade que domina o ambiente online, optei por um retiro estratégico das redes sociais. Essa decisão se revelou incrivelmente benéfica, pois hoje sinto que grande parte das pessoas está sendo seriamente afetada no seu equilíbrio psicológico. Foi um passo essencial para preservar minha própria saúde mental.</p>
+                <p>Ao notar a crescente distorção da realidade que domina o ambiente online, optei por um retiro estratégico das redes sociais. Essa decisão se revelou incrivelmente benéfica, pois hoje sinto que grande parte das pessoas estão sendo seriamente afetadas em seus equilíbrios psicológicos. Foi um passo essencial para preservar minha própria saúde mental.</p>
                 <small>Atualizado 16/10/2025</small>
             </section>
             <!-- L009 -->
